--- a/ui/MainWin.ui
+++ b/ui/MainWin.ui
@@ -316,7 +316,7 @@
        <property name="midLineWidth">
         <number>0</number>
        </property>
-       <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,1,0">
+       <layout class="QVBoxLayout" name="verticalLayout" stretch="2,1,1,0">
         <property name="spacing">
          <number>6</number>
         </property>
@@ -368,7 +368,7 @@ border-color: rgb(114, 171, 171);</string>
           <property name="checkable">
            <bool>false</bool>
           </property>
-          <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,1,0,0">
+          <layout class="QVBoxLayout" name="verticalLayout_2" stretch="5,1,0">
            <property name="spacing">
             <number>6</number>
            </property>
@@ -399,7 +399,7 @@ border-color: rgb(114, 171, 171);</string>
               <enum>QTabWidget::Rounded</enum>
              </property>
              <property name="currentIndex">
-              <number>0</number>
+              <number>1</number>
              </property>
              <property name="iconSize">
               <size>
@@ -582,22 +582,59 @@ border-color: rgb(114, 171, 171);</string>
                  <property name="frameShadow">
                   <enum>QFrame::Plain</enum>
                  </property>
-                 <layout class="QVBoxLayout" name="verticalLayout_3" stretch="0,3,1">
-                  <property name="spacing">
-                   <number>3</number>
-                  </property>
-                  <property name="leftMargin">
-                   <number>3</number>
-                  </property>
-                  <property name="topMargin">
-                   <number>3</number>
-                  </property>
-                  <property name="rightMargin">
-                   <number>3</number>
-                  </property>
-                  <property name="bottomMargin">
-                   <number>3</number>
-                  </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_3">
+                  <item>
+                   <widget class="QToolButton" name="btn_LoadRefPoints">
+                    <property name="enabled">
+                     <bool>false</bool>
+                    </property>
+                    <property name="sizePolicy">
+                     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                      <horstretch>0</horstretch>
+                      <verstretch>0</verstretch>
+                     </sizepolicy>
+                    </property>
+                    <property name="font">
+                     <font>
+                      <pointsize>10</pointsize>
+                     </font>
+                    </property>
+                    <property name="cursor">
+                     <cursorShape>PointingHandCursor</cursorShape>
+                    </property>
+                    <property name="layoutDirection">
+                     <enum>Qt::LeftToRight</enum>
+                    </property>
+                    <property name="autoFillBackground">
+                     <bool>false</bool>
+                    </property>
+                    <property name="styleSheet">
+                     <string notr="true">background-color: rgb(65, 65, 65);</string>
+                    </property>
+                    <property name="text">
+                     <string>    Load Ref. Points ...</string>
+                    </property>
+                    <property name="icon">
+                     <iconset resource="resources.qrc">
+                      <normaloff>:/icon/icons/trajectory.png</normaloff>:/icon/icons/trajectory.png</iconset>
+                    </property>
+                    <property name="iconSize">
+                     <size>
+                      <width>36</width>
+                      <height>28</height>
+                     </size>
+                    </property>
+                    <property name="checkable">
+                     <bool>false</bool>
+                    </property>
+                    <property name="toolButtonStyle">
+                     <enum>Qt::ToolButtonTextBesideIcon</enum>
+                    </property>
+                    <property name="autoRaise">
+                     <bool>true</bool>
+                    </property>
+                   </widget>
+                  </item>
                   <item>
                    <widget class="QToolButton" name="btn_LoadPoints">
                     <property name="enabled">
@@ -627,7 +664,7 @@ border-color: rgb(114, 171, 171);</string>
                      <string notr="true">background-color: rgb(65, 65, 65);</string>
                     </property>
                     <property name="text">
-                     <string>    Load Tracker Points ...</string>
+                     <string>    Load Tool Points ...</string>
                     </property>
                     <property name="icon">
                      <iconset resource="resources.qrc">
@@ -872,7 +909,7 @@ border-color: rgb(114, 171, 171);</string>
                      <string>Show Tracker Points</string>
                     </property>
                     <property name="checked">
-                     <bool>true</bool>
+                     <bool>false</bool>
                     </property>
                    </widget>
                   </item>
@@ -937,19 +974,6 @@ border-color: rgb(114, 171, 171);</string>
            </item>
            <item>
             <spacer name="verticalSpacer_4">
-             <property name="orientation">
-              <enum>Qt::Vertical</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>20</width>
-               <height>40</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item>
-            <spacer name="verticalSpacer_5">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
@@ -1227,7 +1251,7 @@ border-color: rgb(114, 171, 171);</string>
         <item>
          <widget class="QGroupBox" name="groupBox_Viewports">
           <property name="enabled">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <property name="font">
            <font>
