--- a/ui/MainWin.ui
+++ b/ui/MainWin.ui
@@ -373,12 +373,12 @@ color: rgb(157, 205, 216);</string>
               </property>
               <property name="icon">
                <iconset resource="resources.qrc">
-                <normaloff>:/icon/icons/BronchoVision.ico</normaloff>:/icon/icons/BronchoVision.ico</iconset>
+                <normaloff>:/icon/icons/add_patient.png</normaloff>:/icon/icons/add_patient.png</iconset>
               </property>
               <property name="iconSize">
                <size>
-                <width>50</width>
-                <height>50</height>
+                <width>40</width>
+                <height>40</height>
                </size>
               </property>
               <property name="checkable">
@@ -391,6 +391,22 @@ color: rgb(157, 205, 216);</string>
                <bool>true</bool>
               </property>
              </widget>
+            </item>
+            <item>
+             <spacer name="verticalSpacer_5">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeType">
+               <enum>QSizePolicy::Fixed</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
             </item>
             <item>
              <widget class="QGroupBox" name="groupBox_Patients">
@@ -424,71 +440,191 @@ color: rgb(157, 205, 216);</string>
               <property name="checkable">
                <bool>false</bool>
               </property>
-              <layout class="QVBoxLayout" name="verticalLayout_17">
+              <layout class="QVBoxLayout" name="verticalLayout_12">
                <item>
-                <widget class="QListView" name="listView_Patients">
-                 <property name="frameShape">
-                  <enum>QFrame::StyledPanel</enum>
+                <widget class="QTableWidget" name="tableWidget_Patients">
+                 <property name="sizeAdjustPolicy">
+                  <enum>QAbstractScrollArea::AdjustToContents</enum>
                  </property>
                  <property name="selectionBehavior">
                   <enum>QAbstractItemView::SelectRows</enum>
                  </property>
-                 <property name="viewMode">
-                  <enum>QListView::ListMode</enum>
+                 <property name="sortingEnabled">
+                  <bool>true</bool>
                  </property>
+                 <property name="wordWrap">
+                  <bool>false</bool>
+                 </property>
+                 <property name="rowCount">
+                  <number>2</number>
+                 </property>
+                 <attribute name="horizontalHeaderVisible">
+                  <bool>true</bool>
+                 </attribute>
+                 <attribute name="horizontalHeaderCascadingSectionResizes">
+                  <bool>true</bool>
+                 </attribute>
+                 <attribute name="horizontalHeaderDefaultSectionSize">
+                  <number>120</number>
+                 </attribute>
+                 <attribute name="horizontalHeaderMinimumSectionSize">
+                  <number>20</number>
+                 </attribute>
+                 <attribute name="horizontalHeaderStretchLastSection">
+                  <bool>true</bool>
+                 </attribute>
+                 <row>
+                  <property name="text">
+                   <string>1</string>
+                  </property>
+                 </row>
+                 <row>
+                  <property name="text">
+                   <string>2</string>
+                  </property>
+                 </row>
+                 <column>
+                  <property name="text">
+                   <string>Name</string>
+                  </property>
+                 </column>
+                 <column>
+                  <property name="text">
+                   <string>Date</string>
+                  </property>
+                 </column>
+                 <item row="0" column="0">
+                  <property name="text">
+                   <string>Patient_1</string>
+                  </property>
+                 </item>
+                 <item row="0" column="1">
+                  <property name="text">
+                   <string>2020-10-22</string>
+                  </property>
+                 </item>
+                 <item row="1" column="0">
+                  <property name="text">
+                   <string>Patient_2</string>
+                  </property>
+                 </item>
+                 <item row="1" column="1">
+                  <property name="text">
+                   <string>2020-02-02</string>
+                  </property>
+                 </item>
                 </widget>
                </item>
                <item>
-                <widget class="QToolButton" name="btn_LoadPatient">
-                 <property name="enabled">
-                  <bool>true</bool>
+                <layout class="QHBoxLayout" name="horizontalLayout_15" stretch="2,1">
+                 <property name="spacing">
+                  <number>7</number>
                  </property>
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
-                 <property name="font">
-                  <font>
-                   <pointsize>10</pointsize>
-                  </font>
-                 </property>
-                 <property name="cursor">
-                  <cursorShape>PointingHandCursor</cursorShape>
-                 </property>
-                 <property name="layoutDirection">
-                  <enum>Qt::LeftToRight</enum>
-                 </property>
-                 <property name="autoFillBackground">
-                  <bool>false</bool>
-                 </property>
-                 <property name="styleSheet">
-                  <string notr="true">background-color: rgb(65, 65, 65);</string>
-                 </property>
-                 <property name="text">
-                  <string>Load Patient</string>
-                 </property>
-                 <property name="icon">
-                  <iconset resource="resources.qrc">
-                   <normaloff>:/icon/icons/BronchoVision.ico</normaloff>:/icon/icons/BronchoVision.ico</iconset>
-                 </property>
-                 <property name="iconSize">
-                  <size>
-                   <width>50</width>
-                   <height>50</height>
-                  </size>
-                 </property>
-                 <property name="checkable">
-                  <bool>false</bool>
-                 </property>
-                 <property name="toolButtonStyle">
-                  <enum>Qt::ToolButtonTextBesideIcon</enum>
-                 </property>
-                 <property name="autoRaise">
-                  <bool>true</bool>
-                 </property>
-                </widget>
+                 <item>
+                  <widget class="QToolButton" name="btn_LoadPatient">
+                   <property name="enabled">
+                    <bool>false</bool>
+                   </property>
+                   <property name="sizePolicy">
+                    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                     <horstretch>0</horstretch>
+                     <verstretch>0</verstretch>
+                    </sizepolicy>
+                   </property>
+                   <property name="font">
+                    <font>
+                     <pointsize>10</pointsize>
+                    </font>
+                   </property>
+                   <property name="cursor">
+                    <cursorShape>PointingHandCursor</cursorShape>
+                   </property>
+                   <property name="layoutDirection">
+                    <enum>Qt::LeftToRight</enum>
+                   </property>
+                   <property name="autoFillBackground">
+                    <bool>false</bool>
+                   </property>
+                   <property name="styleSheet">
+                    <string notr="true">background-color: rgb(65, 65, 65);</string>
+                   </property>
+                   <property name="text">
+                    <string>Load</string>
+                   </property>
+                   <property name="icon">
+                    <iconset resource="resources.qrc">
+                     <normaloff>:/icon/icons/load_patient.png</normaloff>:/icon/icons/load_patient.png</iconset>
+                   </property>
+                   <property name="iconSize">
+                    <size>
+                     <width>35</width>
+                     <height>35</height>
+                    </size>
+                   </property>
+                   <property name="checkable">
+                    <bool>false</bool>
+                   </property>
+                   <property name="toolButtonStyle">
+                    <enum>Qt::ToolButtonTextBesideIcon</enum>
+                   </property>
+                   <property name="autoRaise">
+                    <bool>true</bool>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QToolButton" name="btn_DeletePatient">
+                   <property name="enabled">
+                    <bool>false</bool>
+                   </property>
+                   <property name="sizePolicy">
+                    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                     <horstretch>0</horstretch>
+                     <verstretch>0</verstretch>
+                    </sizepolicy>
+                   </property>
+                   <property name="font">
+                    <font>
+                     <pointsize>10</pointsize>
+                    </font>
+                   </property>
+                   <property name="cursor">
+                    <cursorShape>PointingHandCursor</cursorShape>
+                   </property>
+                   <property name="layoutDirection">
+                    <enum>Qt::LeftToRight</enum>
+                   </property>
+                   <property name="autoFillBackground">
+                    <bool>false</bool>
+                   </property>
+                   <property name="styleSheet">
+                    <string notr="true">background-color: rgb(65, 65, 65);</string>
+                   </property>
+                   <property name="text">
+                    <string>Delete</string>
+                   </property>
+                   <property name="icon">
+                    <iconset resource="resources.qrc">
+                     <normaloff>:/icon/icons/delete_patient.png</normaloff>:/icon/icons/delete_patient.png</iconset>
+                   </property>
+                   <property name="iconSize">
+                    <size>
+                     <width>35</width>
+                     <height>35</height>
+                    </size>
+                   </property>
+                   <property name="checkable">
+                    <bool>false</bool>
+                   </property>
+                   <property name="toolButtonStyle">
+                    <enum>Qt::ToolButtonTextBesideIcon</enum>
+                   </property>
+                   <property name="autoRaise">
+                    <bool>true</bool>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
                </item>
                <item>
                 <spacer name="verticalSpacer_8">
@@ -668,6 +804,11 @@ color: rgb(157, 205, 216);</string>
                  </property>
                  <item>
                   <widget class="QLabel" name="label_2">
+                   <property name="font">
+                    <font>
+                     <pointsize>10</pointsize>
+                    </font>
+                   </property>
                    <property name="text">
                     <string>2D View</string>
                    </property>
@@ -753,6 +894,11 @@ color: rgb(157, 205, 216);</string>
                </item>
                <item>
                 <widget class="QLabel" name="label_3">
+                 <property name="font">
+                  <font>
+                   <pointsize>10</pointsize>
+                  </font>
+                 </property>
                  <property name="text">
                   <string>3D Views Threshold:</string>
                  </property>
@@ -775,6 +921,11 @@ color: rgb(157, 205, 216);</string>
                  </item>
                  <item>
                   <widget class="QLabel" name="label_4">
+                   <property name="font">
+                    <font>
+                     <pointsize>10</pointsize>
+                    </font>
+                   </property>
                    <property name="text">
                     <string>Virtual</string>
                    </property>
@@ -863,6 +1014,11 @@ color: rgb(157, 205, 216);</string>
                  </item>
                  <item>
                   <widget class="QLabel" name="label_5">
+                   <property name="font">
+                    <font>
+                     <pointsize>10</pointsize>
+                    </font>
+                   </property>
                    <property name="text">
                     <string>Normal</string>
                    </property>
@@ -1043,7 +1199,7 @@ color: rgb(157, 205, 216);</string>
             <item>
              <widget class="QGroupBox" name="groupBox_segmentation">
               <property name="enabled">
-               <bool>true</bool>
+               <bool>false</bool>
               </property>
               <property name="font">
                <font>
@@ -1061,7 +1217,7 @@ color: rgb(157, 205, 216);</string>
                <string notr="true">color: rgb(157, 205, 216);</string>
               </property>
               <property name="title">
-               <string>Tracker</string>
+               <string>Processing</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -1076,7 +1232,7 @@ color: rgb(157, 205, 216);</string>
                <item>
                 <widget class="QToolButton" name="btn_Segment">
                  <property name="enabled">
-                  <bool>true</bool>
+                  <bool>false</bool>
                  </property>
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -1128,7 +1284,7 @@ color: rgb(157, 205, 216);</string>
                <item>
                 <widget class="QToolButton" name="btn_Centerline">
                  <property name="enabled">
-                  <bool>true</bool>
+                  <bool>false</bool>
                  </property>
                  <property name="sizePolicy">
                   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -1423,7 +1579,7 @@ color: rgb(157, 205, 216);</string>
             <item>
              <widget class="QGroupBox" name="groupBox_VB">
               <property name="enabled">
-               <bool>true</bool>
+               <bool>false</bool>
               </property>
               <property name="font">
                <font>
@@ -1563,7 +1719,7 @@ border-color: rgb(114, 171, 171);</string>
                       <item>
                        <widget class="QToolButton" name="btn_regMat">
                         <property name="enabled">
-                         <bool>true</bool>
+                         <bool>false</bool>
                         </property>
                         <property name="sizePolicy">
                          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -2880,7 +3036,6 @@ border-color: rgb(114, 171, 171);</string>
    <addaction name="actionLoad_DICOM"/>
    <addaction name="actionLoad_Image"/>
    <addaction name="separator"/>
-   <addaction name="actionCenterLine"/>
    <addaction name="separator"/>
    <addaction name="actionExit"/>
   </widget>
@@ -2932,6 +3087,9 @@ border-color: rgb(114, 171, 171);</string>
      <pointsize>8</pointsize>
     </font>
    </property>
+   <property name="priority">
+    <enum>QAction::HighPriority</enum>
+   </property>
   </action>
   <action name="actionLoad_DICOM">
    <property name="icon">
@@ -2951,18 +3109,6 @@ border-color: rgb(114, 171, 171);</string>
     <font>
      <pointsize>8</pointsize>
     </font>
-   </property>
-  </action>
-  <action name="actionCenterLine">
-   <property name="icon">
-    <iconset resource="resources.qrc">
-     <normaloff>:/icon/icons/centerLine.png</normaloff>:/icon/icons/centerLine.png</iconset>
-   </property>
-   <property name="text">
-    <string>CenterLine...</string>
-   </property>
-   <property name="toolTip">
-    <string>Extract CenterLine from Airways</string>
    </property>
   </action>
  </widget>
