--- a/ui/RegMatWin.ui
+++ b/ui/RegMatWin.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>RegMatWin</class>
  <widget class="QDialog" name="RegMatWin">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -200,6 +203,9 @@
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
      <property name="styleSheet">
       <string notr="true">color: rgb(170, 255, 255);</string>
      </property>
