--- a/ui/resources.qrc
+++ b/ui/resources.qrc
@@ -3,6 +3,7 @@
     <file>logo/logo_transparent.png</file>
   </qresource>
   <qresource prefix="icon">
+    <file>icons/3D_vis.png</file>
     <file>icons/add_patient.png</file>
     <file>icons/delete_patient.png</file>
     <file>icons/load_patient.png</file>
