--- a/ui/ToolsWin.ui
+++ b/ui/ToolsWin.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>561</width>
-    <height>355</height>
+    <width>700</width>
+    <height>450</height>
    </rect>
   </property>
   <property name="palette">
@@ -458,6 +458,9 @@
               <kerning>true</kerning>
              </font>
             </property>
+            <property name="styleSheet">
+             <string notr="true">color: rgb(202, 202, 202);</string>
+            </property>
             <property name="text">
              <string>Tool</string>
             </property>
@@ -751,6 +754,9 @@
               <bold>false</bold>
               <kerning>true</kerning>
              </font>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">color: rgb(202, 202, 202);</string>
             </property>
             <property name="text">
              <string>Reference</string>
